--- a/index.html
+++ b/index.html
@@ -8,13 +8,55 @@
     <link rel="stylesheet" href="web/bootstrap/bootstrap-3.3.7-dist/css/bootstrap.css">
     <link rel="stylesheet" href="web/bootstrap/bootstrap-3.3.7-dist/css/bootstrap.css.map">
     <link rel="stylesheet" href="web/bootstrap/bootstrap-3.3.7-dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="web/bootstrap/bootstrap-3.3.7-dist/js/bootstrap.js">
+    <link rel="stylesheet" href="web/bootstrap/bootstrap-3.3.7-dist/bootstrap.min.js">
+    <link rel="stylesheet" href="web/bootstrap/bootstrap-3.3.7-dist/npm.js">
     <link rel="stylesheet" href="web/bootstrap/bootstrap-3.3.7-dist">
     <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/style.css">
 
   </head>
   <body>
+    <header>
+      <div class="banniere">
+        <div class="titre_du_site"></div>
+        <div class="sous-titre"></div>
+      </div>
+      <div class="menu">
 
+      </div>
+    <header>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<!--
             <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="#">Navbar</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -50,5 +92,6 @@
           </form>
         </div>
       </nav>
+-->
   </body>
 </html>
