--- a/index.html
+++ b/index.html
@@ -2,17 +2,14 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Example</title>
-    <link rel="stylesheet" href="">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Josefin+Sans:300,400|Roboto:300,400,500">
+    <title>Brigade de Montbenon</title>
     <link rel="stylesheet" href="web/bootstrap/bootstrap-3.3.7-dist/css/bootstrap.css">
     <link rel="stylesheet" href="web/bootstrap/bootstrap-3.3.7-dist/css/bootstrap.css.map">
     <link rel="stylesheet" href="web/bootstrap/bootstrap-3.3.7-dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="web/bootstrap/bootstrap-3.3.7-dist/js/bootstrap.js">
-    <link rel="stylesheet" href="web/bootstrap/bootstrap-3.3.7-dist/bootstrap.min.js">
-    <link rel="stylesheet" href="web/bootstrap/bootstrap-3.3.7-dist/npm.js">
+    <link rel="stylesheet" href="web/bootstrap/bootstrap-3.3.7-dist/js/bootstrap.min.js">
+    <link rel="stylesheet" href="web/bootstrap/bootstrap-3.3.7-dist/js/npm.js">
     <link rel="stylesheet" href="web/bootstrap/bootstrap-3.3.7-dist">
-    <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/style.css">
 
   </head>
