--- a/index.html
+++ b/index.html
@@ -20,75 +20,66 @@
         <div class="sous-titre"></div>
       </div>
       <div class="menu">
-
-      </div>
-    <header>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-            <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">Navbar</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
+        <nav class="navbar navbar-default">
+        <div class="container-fluid">
+        <!-- Brand, toggle pour l'affichage en version mobile -->
+        <div class="navbar-header">
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
         </button>
-
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav mr-auto">
-            <li class="nav-item active">
-              <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Link</a>
-            </li>
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                Dropdown
-              </a>
-              <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <a class="dropdown-item" href="#">Action</a>
-                <a class="dropdown-item" href="#">Another action</a>
-                <div class="dropdown-divider"></div>
-                <a class="dropdown-item" href="#">Something else here</a>
-              </div>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link disabled" href="#">Disabled</a>
-            </li>
-          </ul>
-          <form class="form-inline my-2 my-lg-0">
-            <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-          </form>
+        <a class="navbar-brand" href="#">Brand</a>
         </div>
-      </nav>
+        <!-- Liens de navigation, formulaires et autres -->
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+        <ul class="nav navbar-nav">
+        <li class="active"><a href="#" title="Lien actif">Lien actif <span class="sr-only">(current)</span></a></li>
+        <li class="dropdown">
+        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Lien 2 <span class="caret"></span></a>
+        <ul class="dropdown-menu">
+        <li><a href="#" title="Lien 2.1">Lien 2.1</a></li>
+        <li><a href="#" title="Lien 2.2">Lien 2.2</a></li>
+        <li><a href="#" title="Lien 2.3">Lien 2.3</a></li>
+        <li role="separator" class="divider"></li>
+        <li><a href="#" title="Lien séparé 1">Lien séparé 1</a></li>
+        <li role="separator" class="divider"></li>
+        <li><a href="#" title="Lien séparé 2">Lien séparé 2</a></li>
+        </ul>
+        </li>
+        </ul>
+        <form class="navbar-form navbar-left">
+        <div class="form-group">
+        <input type="text" class="form-control" placeholder="Rechercher">
+        </div>
+        <button type="submit" class="btn btn-sm btn-default">OK</button>
+        </form>
+        <ul class="nav navbar-nav navbar-right">
+        <li><a href="./web/html/login.html" title="Login">Login</a></li>
+        </ul>
+        </div><!-- /.navbar-collapse -->
+        </div><!-- /.container-fluid -->
+        </nav>
+      </div>
+    </header>
 
+
+
+
+
+
+
+
+
+
+
+    <footer>
+      <p>Brigade de Montbenon</p>
+
+      <p>Groupe scout de la région Lausannoise</p>
+
+      <p>© 1912 - 2018</p>
+    </footer>
   </body>
 </html>
